# inkpython

./: LICENSE  README.md  pyproject.toml
inkpython/: __init__.py  cli.py
inkpython.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: common.py  test_compiled_stories.py
tests/inkjs/utils/: test_simple_json.py  test_try_get_result.py  test_type_assertion.py
